# aoba_dioxus

./: Cargo.toml  Dioxus.toml  LICENSE  README.md
assets/style/: colors.scss  main.scss  mixins.scss  nav.scss
src/: db.rs  main.rs
src/components/: echo.rs  main_layout.rs  mod.rs  navbar.rs
src/models/: media.rs
src/views/: home.rs  settings.rs
