[package]
name = "aoba_v2"
version = "0.1.0"
authors = ["Amatsugu <khamraj@kaisei.app>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.3", optional = true }
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dioxus-cli-config = "0.6.3"
dioxus-fullstack = "0.6.3"
mongodb = { version = "3.2.3", optional = true }
serde = "1.0.219"
serde_repr = "0.1.20"
tokio = { version = "1.44.1", optional = true }

[features]
default = ["web", "server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:mongodb", "dep:tokio", "dep:axum"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
